translations: fix "Accumulated Power" to "Accumulated Energy" for kWh sensors
Signed-off-by: Ricardo Pardini <ricardo@pardini.net>

--- a/custom_components/must_inverter/translations/pt-BR.json
+++ b/custom_components/must_inverter/translations/pt-BR.json
@@ -296,7 +296,7 @@
       "chargerwarningmessage": { "name": "Mensagem de alerta (Carregador)" },
       "battvolgrade": { "name": "Tensão nominal da bateria" },
       "ratedcurrent": { "name": "Corrente nominal" },
-      "accumulatedpower": { "name": "Potência acumulada" },
+      "accumulatedpower": { "name": "Energia acumulada" },
       "accumulatedtime": { "name": "Tempo acumulado" },
       "invertermachinetype": { "name": "Modelo" },
       "inverterserialnumber": { "name": "Número de série" },
@@ -344,14 +344,14 @@
       "acradiatortemperature": { "name": "Temperatura do dissipador AC" },
       "transformertemperature": { "name": "Temperatura do transformador" },
       "dcradiatortemperature": { "name": "Temperatura do dissipador DC" },
-      "accumulatedchargerpower": { "name": "Potência de carga acumulada" },
-      "accumulateddischargerpower": { "name": "Potência de descarga acumulada" },
-      "accumulatedbuypower": { "name": "Potência comprada acumulada" },
-      "accumulatedsellpower": { "name": "Potência vendida acumulada" },
-      "accumulatedloadpower": { "name": "Potência da carga acumulada" },
-      "accumulatedselfusepower": { "name": "Potência de autoconsumo acumulada" },
-      "accumulatedpvsellpower": { "name": "Potência solar vendida acumulada" },
-      "accumulatedgridchargerpower": { "name": "Potência de carga da rede acumulada" },
+      "accumulatedchargerpower": { "name": "Energia de carga acumulada" },
+      "accumulateddischargerpower": { "name": "Energia de descarga acumulada" },
+      "accumulatedbuypower": { "name": "Energia comprada acumulada" },
+      "accumulatedsellpower": { "name": "Energia vendida acumulada" },
+      "accumulatedloadpower": { "name": "Energia da carga acumulada" },
+      "accumulatedselfusepower": { "name": "Energia de autoconsumo acumulada" },
+      "accumulatedpvsellpower": { "name": "Energia solar vendida acumulada" },
+      "accumulatedgridchargerpower": { "name": "Energia de carga da rede acumulada" },
       "invertererrormessage": { "name": "Mensagem de erro (Inversor)" },
       "inverterwarningmessage": { "name": "Mensagem de alerta (Inversor)" },
       "battpower": { "name": "Potência da bateria" },
