--- a/custom_components/must_inverter/translations/pt-BR.json
+++ b/custom_components/must_inverter/translations/pt-BR.json
@@ -187,7 +187,7 @@
       "floatvoltage": { "name": "Tensão de flutuação" },
       "absorptionvoltage": { "name": "Tensão de absorção" },
       "batterylowvoltage": { "name": "Baixa tensão da bateria" },
-      "maxchargercurrent": { "name": "Corrente máxima de carga" },
+      "maxchargercurrent": { "name": "Corrente máxima de carregamento" },
       "batteryah": { "name": "Capacidade da bateria (Ah)" },
       "batteryequalizationvoltage": { "name": "Carga de equalização tensão" },
       "batteryequalizationtime": { "name": "Carga de equalização tempo" },
@@ -206,9 +206,9 @@
       "invertermaxdischargercurrent": { "name": "Corrente de descarga máxima do inversor" },
       "batterystopdischargingvoltage": { "name": "Tensão de parada de descarga da bateria" },
       "batterystopchargingvoltage": { "name": "Tensão de parada de carga da bateria" },
-      "gridmaxchargercurrentset": { "name": "Corrente máxima de carga da rede" },
+      "gridmaxchargercurrentset": { "name": "Corrente máxima de carregamento pela rede" },
       "inverterbatterylowvoltage": { "name": "Baixa tensão da bateria (Inversor)" },
-      "maxcombinechargercurrent": { "name": "Corrente máxima de carga combinada" }
+      "maxcombinechargercurrent": { "name": "Corrente máxima de carregamento combinada" }
     },
     "select": {
       "batterytype": {
@@ -288,15 +288,15 @@
       },
       "pvvoltage": { "name": "Tensão PV" },
       "batteryvoltage": { "name": "Tensão da bateria" },
-      "chargercurrent": { "name": "Corrente de carga" },
-      "chargerpower": { "name": "Potência de carga" },
+      "chargercurrent": { "name": "Corrente do carregador" },
+      "chargerpower": { "name": "Potência do carregador" },
       "radiatortemperature": { "name": "Temperatura do dissipador" },
       "externaltemperature": { "name": "Temperatura externa" },
       "chargererrormessage": { "name": "Mensagem de erro (Carregador)" },
       "chargerwarningmessage": { "name": "Mensagem de alerta (Carregador)" },
       "battvolgrade": { "name": "Tensão nominal da bateria" },
       "ratedcurrent": { "name": "Corrente nominal" },
-      "accumulatedpower": { "name": "Energia acumulada" },
+      "accumulatedpower": { "name": "Energia PV acumulada" },
       "accumulatedtime": { "name": "Tempo acumulado" },
       "invertermachinetype": { "name": "Modelo" },
       "inverterserialnumber": { "name": "Número de série" },
@@ -344,14 +344,14 @@
       "acradiatortemperature": { "name": "Temperatura do dissipador AC" },
       "transformertemperature": { "name": "Temperatura do transformador" },
       "dcradiatortemperature": { "name": "Temperatura do dissipador DC" },
-      "accumulatedchargerpower": { "name": "Energia de carga acumulada" },
+      "accumulatedchargerpower": { "name": "Energia do carregador acumulada" },
       "accumulateddischargerpower": { "name": "Energia de descarga acumulada" },
       "accumulatedbuypower": { "name": "Energia comprada acumulada" },
       "accumulatedsellpower": { "name": "Energia vendida acumulada" },
       "accumulatedloadpower": { "name": "Energia da carga acumulada" },
       "accumulatedselfusepower": { "name": "Energia de autoconsumo acumulada" },
       "accumulatedpvsellpower": { "name": "Energia solar vendida acumulada" },
-      "accumulatedgridchargerpower": { "name": "Energia de carga da rede acumulada" },
+      "accumulatedgridchargerpower": { "name": "Energia do carregador da rede acumulada" },
       "invertererrormessage": { "name": "Mensagem de erro (Inversor)" },
       "inverterwarningmessage": { "name": "Mensagem de alerta (Inversor)" },
       "battpower": { "name": "Potência da bateria" },
