fix(translations): "Accumulated Power" to "Accumulated Energy" for kWh sensors (#66)
* translations: fix "Accumulated Power" to "Accumulated Energy" for kWh sensors

Signed-off-by: Ricardo Pardini <ricardo@pardini.net>

* remove ambiguity in pt-br

---------

Signed-off-by: Ricardo Pardini <ricardo@pardini.net>
Co-authored-by: Muka Schultze <samuelschultze@gmail.com>

--- a/custom_components/must_inverter/translations/en.json
+++ b/custom_components/must_inverter/translations/en.json
@@ -296,7 +296,7 @@
       "chargerwarningmessage": { "name": "Warning Message (Charger)" },
       "battvolgrade": { "name": "Battery Voltage Grade" },
       "ratedcurrent": { "name": "Rated Current" },
-      "accumulatedpower": { "name": "Accumulated Power" },
+      "accumulatedpower": { "name": "Accumulated PV Energy" },
       "accumulatedtime": { "name": "Accumulated Time" },
       "invertermachinetype": { "name": "Machine Type (Inverter)" },
       "inverterserialnumber": { "name": "Serial Number (Inverter)" },
@@ -344,14 +344,14 @@
       "acradiatortemperature": { "name": "AC Radiator Temperature" },
       "transformertemperature": { "name": "Transformer Temperature" },
       "dcradiatortemperature": { "name": "DC Radiator Temperature" },
-      "accumulatedchargerpower": { "name": "Accumulated Charger Power" },
-      "accumulateddischargerpower": { "name": "Accumulated Discharger Power" },
-      "accumulatedbuypower": { "name": "Accumulated Buy Power" },
-      "accumulatedsellpower": { "name": "Accumulated Sell Power" },
-      "accumulatedloadpower": { "name": "Accumulated Load Power" },
-      "accumulatedselfusepower": { "name": "Accumulated Self Use Power" },
-      "accumulatedpvsellpower": { "name": "Accumulated PV Sell Power" },
-      "accumulatedgridchargerpower": { "name": "Accumulated Grid Charger Power" },
+      "accumulatedchargerpower": { "name": "Accumulated Charger Energy" },
+      "accumulateddischargerpower": { "name": "Accumulated Discharger Energy" },
+      "accumulatedbuypower": { "name": "Accumulated Buy Energy" },
+      "accumulatedsellpower": { "name": "Accumulated Sell Energy" },
+      "accumulatedloadpower": { "name": "Accumulated Load Energy" },
+      "accumulatedselfusepower": { "name": "Accumulated Self Use Energy" },
+      "accumulatedpvsellpower": { "name": "Accumulated PV Sell Energy" },
+      "accumulatedgridchargerpower": { "name": "Accumulated Grid Charger Energy" },
       "invertererrormessage": { "name": "Error Message (Inverter)" },
       "inverterwarningmessage": { "name": "Warning Message (Inverter)" },
       "battpower": { "name": "Battery Power" },
